kubernetes/apps/base/online-boutique/base/istio/peerauthentication.yaml
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: boutique
spec:
  mtls:
    mode: STRICT
