kubernetes/apps/base/online-boutique/base/istio/virtualservice-checkout.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: checkout-service
  namespace: boutique
spec:
  hosts:
  - checkout-service
  http:
  - route:
    - destination:
        host: checkout-service
        port:
          number: 5050
    retries:
      attempts: 3
      perTryTimeout: 2s
      retryOn: "unavailable,deadline-exceeded"
    timeout: 10s
