kubernetes/apps/base/online-boutique/base/istio/virtualservice-frontend.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: frontend
  namespace: boutique
spec:
  hosts:
    - "boutique.timourhomelab.org"
  gateways:
    - boutique-gateway
  http:
    - route:
        - destination:
            host: frontend
            port:
              number: 8080
