kubernetes/apps/base/online-boutique/base/istio/authorizationpolicy.yaml
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: checkout-service-authz
  namespace: boutique
spec:
  selector:
    matchLabels:
      app: checkout-service
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/boutique/sa/frontend"]
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: cart-service-authz
  namespace: boutique
spec:
  selector:
    matchLabels:
      app: cart-service
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
        - "cluster.local/ns/boutique/sa/frontend"
        - "cluster.local/ns/boutique/sa/checkout-service"
